Fix header display name overlap with searchbar (#11824)

--- a/src/amo/components/Header/styles.scss
+++ b/src/amo/components/Header/styles.scss
@@ -118,7 +118,7 @@
   }
 
   @include respond-to(extraLarge) {
-    grid-column: 2 / -1;
+    grid-column: 1 / -1;
     grid-row: 1 / 2;
   }
 
